# syncman

./: CMakeLists.txt  CODING_STYLE.md
client/: config.cpp  config.h  connection.cpp  connection.h  files.h  main.cpp
server/: files.cpp  server.cpp  server.h
